# PocketQuant

./: .gitignore  .gitmodules  README.md  app.json  package-lock.json  package.json  tsconfig.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android/app/src/main/java/com/remotellm/: LlamaModule.java  LlamaPackage.java  MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
engine/turboquant/: CMakeLists.txt
engine/turboquant/include/: turboquant.h
engine/turboquant/src/: hadamard.cpp  hadamard.h  hadamard_neon.cpp  hadamard_neon.h  qjl.cpp  qjl.h  quantize.cpp  quantize.h  turbo_cache.cpp
engine/turboquant/tests/: test_hadamard.cpp  test_pipeline.cpp  test_qjl.cpp  test_quantize.cpp
ios/: Podfile
ios/RemoteLLM/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/RemoteLLM.xcodeproj/: project.pbxproj
ios/RemoteLLM.xcodeproj/xcshareddata/xcschemes/: RemoteLLM.xcscheme
specs/: NativeLlama.ts
src/: App.tsx  types.ts
src/components/: BenchmarkOverlay.tsx  InputBar.tsx  MessageBubble.tsx  ModelPicker.tsx
src/hooks/: useLlama.ts  useModelDownloader.ts
src/screens/: ChatScreen.tsx
src/utils/: clipboard.ts
